--- a/index.html
+++ b/index.html
@@ -508,24 +508,27 @@ padding: 1px 10px;
             <td>4</td><td>2018</td><td>O</td><td>IAO052 - MÉTODOS NUMÉRICOS PARA LA INGENIERÍA</td><td><span class="grade-badge">15</span></td><td>4</td><td>2</td><td>P-202327320180IAO0522P</td>
           </tr>
  <tr class="period-row">
-              <td colspan="8"style="background: rgba(101, 88, 211, 0.15); color: rgb(101, 88, 211); font-weight: bolder; text-align: center; padding: 8px;">PERIODO ACADÉMICO 2024-1</td>
+              <td colspan="8"style="background: rgba(101, 88, 211, 0.15); color: rgb(101, 88, 211); font-weight: bolder; text-align: center; padding: 8px;">PERIODO ACADÉMICO 2024-0</td>
             </tr>
  <tr>
             <td>5</td><td>2018</td><td>O</td><td>IAO051 - ANÁLISIS DE PRODUCTOS AGROINDUSTRIALES</td><td><span class="grade-badge">16</span></td><td>4</td><td>1</td><td>P-202407320180IAO0511P</td>
           </tr>
 <tr>
+   <tr class="period-row">
+              <td colspan="8"style="background: rgba(101, 88, 211, 0.15); color: rgb(101, 88, 211); font-weight: bolder; text-align: center; padding: 8px;">PERIODO ACADÉMICO 2024-1</td>
+            </tr>
             <td>5</td><td>2018</td><td>O</td><td>IAO053 - MICROBIOLOGÍA GENERAL</td><td><span class="grade-badge">14</span></td><td>4</td><td>1</td><td>P-202427320180IAO0531P</td>
           </tr>
           <tr>
             <td>5</td><td>2018</td><td>O</td><td>IAO054 - PROPIEDADES FÍSICAS DE LOS MATERIALES AGROINDUSTRIALES</td><td><span class="grade-badge">20</span></td><td>3</td><td>1</td><td>P-202417320180IAO0541P</td>
  </tr> 
 <tr>
-            <td>5</td><td>2018</td><td>O</td><td>IAO055 - TECNOLOGÍA POST-COSECHA</td><td><span class="grade-badge">11</span></td><td>3</td><td>1</td><td>P-202327320180IAO0522P</td>
+            <td>5</td><td>2018</td><td>O</td><td>IAO055 - TECNOLOGÍA POST-COSECHA</td><td><span class="grade-badge">14</span></td><td>3</td><td>1</td><td>P-202327320180IAO0522P</td>
           </tr>
-            <td>5</td><td>2018</td><td>O</td><td>IAO056 - TERMODINÁMICA</td><td><span class="grade-badge">14</span></td><td>4</td><td>1</td><td>P-202417320180IAO0561P</td>
+            <td>5</td><td>2018</td><td>O</td><td>IAO056 - TERMODINÁMICA</td><td><span class="grade-badge">17</span></td><td>4</td><td>1</td><td>P-202417320180IAO0561P</td>
           </tr> 
 <tr>
-            <td>5</td><td>2018</td><td>O</td><td>IAO057 - ZOOTECNIA GENERAL</td><td><span class="grade-badge">12</span></td><td>3</td><td>1</td><td>P-202317320180IAO0371P</td>
+            <td>5</td><td>2018</td><td>O</td><td>IAO057 - ZOOTECNIA GENERAL</td><td><span class="grade-badge">16</span></td><td>3</td><td>1</td><td>P-202317320180IAO0371P</td>
           </tr>
  <tr>
             <td>5</td><td>2018</td><td>O</td><td>IAO058 - INGLÉS TÉCNICO I</td><td><span class="grade-badge">16</span></td><td>3</td><td>2</td><td>P-202417320180IAO0582P</td>
@@ -542,22 +545,22 @@ padding: 1px 10px;
             <td>6</td><td>2018</td><td>O</td><td>IAO063 - MÉTODOS ESTADÍSTICOS PARA LA INVESTIGACIÓN</td><td><span class="grade-badge">16</span></td><td>4</td><td>1</td><td>P-202427320180IAO0631P</td>
           </tr>
  <tr>
-            <td>6</td><td>2018</td><td>O</td><td>IAO064 - MICROBIOLOGÍA DE LOS ALIMENTOS</td><td><span class="grade-badge">12</span></td><td>4</td><td>1</td><td>P-202417320180IAO0582P</td>
+            <td>6</td><td>2018</td><td>O</td><td>IAO064 - MICROBIOLOGÍA DE LOS ALIMENTOS</td><td><span class="grade-badge">14</span></td><td>4</td><td>1</td><td>P-202417320180IAO0582P</td>
           </tr>
  <tr>
             <td>6</td><td>2018</td><td>O</td><td>IAO065 - OPERACIONES UNITARIAS AGROINDUSTRIALES 1</td><td><span class="grade-badge">15</span></td><td>4</td><td>1</td><td>P-202427320180IAO0531P</td>
           </tr>
  <tr>
-            <td>6</td><td>2018</td><td>O</td><td>IAO066 - TECNOLOGÍA POST-BENEFICIO</td><td><span class="grade-badge">11</span></td><td>3</td><td>1</td><td>P-202327320180IAO0522P</td>
+            <td>6</td><td>2018</td><td>O</td><td>IAO066 - TECNOLOGÍA POST-BENEFICIO</td><td><span class="grade-badge">14</span></td><td>3</td><td>1</td><td>P-202327320180IAO0522P</td>
           </tr>
  <tr>
-            <td>6</td><td>2018</td><td>O</td><td>IAO067 - INGLÉS TÉCNICO II</td><td><span class="grade-badge">12</span></td><td>3</td><td>1</td><td>P-202317320180IAO0371P</td>
+            <td>6</td><td>2018</td><td>O</td><td>IAO067 - INGLÉS TÉCNICO II</td><td><span class="grade-badge">15</span></td><td>3</td><td>1</td><td>P-202317320180IAO0371P</td>
           </tr>
  <tr class="period-row">
               <td colspan="8"style="background: rgba(101, 88, 211, 0.15); color: rgb(101, 88, 211); font-weight: bolder; text-align: center; padding: 8px;">PERIODO ACADÉMICO 2025-1</td>
             </tr>
 <tr>
-            <td>7</td><td>2018</td><td>O</td><td>IAO071 - GESTIÓN DE SISTEMAS DE LA CALIDAD</td><td><span class="grade-badge">15</span></td><td>3</td><td>1</td><td>P-202427320180IAO0611P</td>
+            <td>7</td><td>2018</td><td>O</td><td>IAO071 - GESTIÓN DE SISTEMAS DE LA CALIDAD</td><td><span class="grade-badge">14</span></td><td>3</td><td>1</td><td>P-202427320180IAO0611P</td>
           </tr>
           <tr>
             <td>7</td><td>2018</td><td>O</td><td>IAO072 - MERCADOTECNIA</td><td><span class="grade-badge">17</span></td><td>3</td><td>2</td><td>P-202427320180IAO0621P</td>
