--- a/index.html
+++ b/index.html
@@ -510,6 +510,9 @@ padding: 1px 10px;
  <tr class="period-row">
               <td colspan="8"style="background: rgba(101, 88, 211, 0.15); color: rgb(101, 88, 211); font-weight: bolder; text-align: center; padding: 8px;">PERIODO ACADÉMICO 2024-0</td>
             </tr>
+          <tr>
+            <td>4</td><td>2018</td><td>O</td><td>IAO051 - PRÁCTICA ANÁLISIS DE PRODUCTOS AGROINDUSTRIALES</td><td><span class="grade-badge">15</span></td><td>4</td><td>1</td><td>P-202407320180IAO0511P</td>
+          </tr>
  <tr>
             <td>5</td><td>2018</td><td>O</td><td>IAO051 - ANÁLISIS DE PRODUCTOS AGROINDUSTRIALES</td><td><span class="grade-badge">16</span></td><td>4</td><td>1</td><td>P-202407320180IAO0511P</td>
           </tr>
